package com.climalert.models.entities.notificacion;

public enum EstadoNotificacion {
  PENDIENTE,
  ENVIADO,
  FALLIDO
}
